<resources>
    <string name="app_name">App</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="new_post">New post</string>
    <string name="message">Message</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

</resources>