<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home">
    </item>
    <item
        android:id="@+id/nav_post"
        android:title="@string/new_post"
        android:icon="@drawable/add_post">
    </item>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon">
    </item>
    <item
        android:id="@+id/nav_message"
        android:title="@string/message"
        android:icon="@drawable/messages">
    </item>
    <item
        android:id="@+id/nav_setting"
        android:title="@string/setting"
        android:icon="@drawable/settings">
    </item>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout">
    </item>

</menu>